--- a/京东首页克隆/京东首页.html
+++ b/京东首页克隆/京东首页.html
@@ -189,7 +189,11 @@
 		<div id="slider-box">
 		   <!--1、 滑动广告 -->
 			<div id="slider">
-		   <img src="Images/index/banner_02.jpg">
+				<img class="active" src="Images/index/banner_01.jpg">
+				<img src="Images/index/banner_02.jpg">
+				<img src="Images/index/banner_03.jpg">
+				<img src="Images/index/banner_04.jpg">
+				<img src="Images/index/banner_05.jpg">
 			<ul>
 			   <li>1</li>
 				<li>2</li>
@@ -400,8 +404,8 @@
 					<li><img src="Images/index/ad_small_03.jpg"></li>
 				</ul>
 			</div>
-		<!-- 2、2F 家电通讯 -->
-         <div class="floor clear">
+		<!-- 2、1F 家电通讯 -->
+         <div id="f1" class="floor clear">
 			   <!--1、***** 上边栏 -->
 				<header>
 				   <span>1F</span>
@@ -532,6 +536,270 @@
 				<!-- 3添加子元素 -->
 				<div class="clear"></div>
 			</div>
+		  <!--2F美妆护肤-->
+		  <div id="f2" class="floor clear">
+			  <!--1、***** 上边栏 -->
+			  <header>
+				  <span>2F</span>
+				  <p>美妆护肤</p>
+				  <ul class="tab lf">
+					  <li><a href="#">特价商品</a></li>
+					  <li><a href="#">大家电</a></li>
+					  <li><a href="#">小家电</a></li>
+					  <li><a href="#">手机通讯</a></li>
+					  <li><a href="#">汽车五金</a></li>
+				  </ul>
+				  <ul class=" links lf">
+					  <li><a href="#">合约计划说明></a></li>
+					  <li><a href="#">大家电配送</a></li>
+				  </ul>
+			  </header>
+			  <!--2、***** 内容 -->
+			  <aside class="lf_list">
+				  <ul>
+					  <li>手机</li>
+					  <li>空调</li>
+					  <li>手机配件</li>
+					  <li>平板电视</li>
+					  <li>话费补贴</li>
+					  <li>冰箱</li>
+					  <li>生活电器</li>
+					  <li>洗衣机</li>
+					  <li>厨房电器</li>
+					  <li>热水器</li>
+					  <li>个护健康</li>
+					  <li>烟机/灶具</li>
+					  <li>五金家装</li>
+					  <li>家庭影院</li>
+					  <li>冰柜/冰吧</li>
+					  <li>汽车用品</li>
+				  </ul>
+				  <img src="Images/index/fl_01.jpg" >
+			  </aside>
+			  <div class="content">
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+				  <div>
+					  <img src="Images/index/fl_ad_01.jpg">
+				  </div>
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+			  </div>
+			  <aside class="rt-aside">
+				  <ul>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+				  </ul>
+				  <img src="Images/index/fl_ad_02.jpg">
+			  </aside>
+			  <!-- 3添加子元素 -->
+			  <div class="clear"></div>
+		  </div>
+		  <!--3F婴童用品-->
+		  <div id="f3" class="floor clear">
+			  <!--1、***** 上边栏 -->
+			  <header>
+				  <span>3F</span>
+				  <p>婴童用品</p>
+				  <ul class="tab lf">
+					  <li><a href="#">特价商品</a></li>
+					  <li><a href="#">大家电</a></li>
+					  <li><a href="#">小家电</a></li>
+					  <li><a href="#">手机通讯</a></li>
+					  <li><a href="#">汽车五金</a></li>
+				  </ul>
+				  <ul class=" links lf">
+					  <li><a href="#">合约计划说明></a></li>
+					  <li><a href="#">大家电配送</a></li>
+				  </ul>
+			  </header>
+			  <!--2、***** 内容 -->
+			  <aside class="lf_list">
+				  <ul>
+					  <li>手机</li>
+					  <li>空调</li>
+					  <li>手机配件</li>
+					  <li>平板电视</li>
+					  <li>话费补贴</li>
+					  <li>冰箱</li>
+					  <li>生活电器</li>
+					  <li>洗衣机</li>
+					  <li>厨房电器</li>
+					  <li>热水器</li>
+					  <li>个护健康</li>
+					  <li>烟机/灶具</li>
+					  <li>五金家装</li>
+					  <li>家庭影院</li>
+					  <li>冰柜/冰吧</li>
+					  <li>汽车用品</li>
+				  </ul>
+				  <img src="Images/index/fl_01.jpg" >
+			  </aside>
+			  <div class="content">
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+				  <div>
+					  <img src="Images/index/fl_ad_01.jpg">
+				  </div>
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+				  <dl class="w1">
+					  <dt>
+						  <img src="Images/index/fl_dl_01.jpg">
+						  <a href="#">48英寸智能电视机2249,55英寸智能电视机4399</a>
+					  </dt>
+					  <dd class="text">送澳门风云2电影票</dd>
+				  </dl>
+			  </div>
+			  <aside class="rt-aside">
+				  <ul>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+					  <li>
+						  <img src="Images/index/rBEQWVFQLqgIAAAAAAAFbgvhBqMAAC0MAP_3cIAAAWG414.gif">
+					  </li>
+				  </ul>
+				  <img src="Images/index/fl_ad_02.jpg">
+			  </aside>
+			  <!-- 3添加子元素 -->
+			  <div class="clear"></div>
+		  </divid>
 		<!-- 33、热门晒单 -->
 		<div id="others">
 		<!-- 1、热门晒单一 -->
@@ -880,5 +1148,20 @@
 			<a href="#"><img src="Images/cx.jpg"></a>
 		</span>
   </footer>
+   <div class="affix">
+	   <ul>
+		   <li><a href="#f1">家电通讯</a></li>
+		   <li><a href="#f2">美妆护肤</a></li>
+		   <li><a href="#f3">婴童用品</a></li>
+	   </ul>
+   </div>
+   <script src="jquery-1.11.3.js"></script>
+   <script src="jd_index.js"></script>
+   <script>
+	   $('#slider').carousel();
+	   $(window).scrollspy({
+		   target:'div.affix'
+	   });
+   </script>
  </body>
 </html>
